Update personal information format, enhance resume settings with summary, and implement skills section in resume generation. Refactor file paths for data storage and improve error handling in PDF generation. Add functionality for managing saved summaries and update work experience handling.

--- a/data/resume_settings.json
+++ b/data/resume_settings.json
@@ -1,9 +1,9 @@
 {
-    "include_personal": true,
-    "include_experience": true,
-    "selected_experiences": [],
-    "font": "Arial",
+    "selected_experiences": [
+        "Napoli Shkolnik PLLC - IT Assistant"
+    ],
     "font_size": "11",
     "page_size": "Letter",
-    "margins": "1"
+    "margins": "1",
+    "summary": "Dedicated IT support specialist committed to providing reliable technical solutions and exceptional user assistance to ensure seamless operations in the digital landscape.\n\n\n\n\n"
 }
