--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/league-spartan": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2"
+    "@mui/material": "^7.0.2",
+    "mui-color-input": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
