--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/league-spartan": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "html2pdf.js": "^0.10.3",
     "mui-color-input": "^7.0.0"
   },
   "devDependencies": {
