--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/league-spartan": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@react-pdf/renderer": "^4.3.0",
     "html-to-text": "^9.0.5",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
